<resources>
    <string name="app_name">recipeApp_Anton</string>
    <string name="title_category">категории</string>
    <string name="title_favorites">избранное</string>
    <string name="recipe_ingredients">ингредиенты</string>
    <string name="recipe_method">способ приготовления</string>
    <string name="category_image_title">обложка списка категории</string>
    <string name="image_of_category">обложка категории рецепта</string>
    <string name="image_of_recipe">обложка рецепта</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipe_portions">Порции:</string>
    <string name="default_portions_value">1</string>
    <string name="favorite_icon">иконка добавления в избранное</string>
    <string name="empty_favorites_text">Вы еще не добавили ни одного рецепта в избранное</string>
    <string name="favorite_image_text">обложка списка избранное</string>
    <string name="favorite_text">избранное</string>
    <string name="error_loading_data">Ошибка получения данных</string>
</resources>