<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background_color"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height_constraintlayout">

        <ImageView
            android:id="@+id/ivRecipes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/favorite_image_text"
            android:scaleType="centerCrop"
            android:src="@drawable/bcg_favorites"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvCategories"
            style="@style/StyleTitleView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_medium_size"
            android:layout_marginBottom="@dimen/layout_medium_size"
            android:autoSizeTextType="uniform"
            android:background="@drawable/shape_drawable_title"
            android:gravity="center"
            android:padding="@dimen/padding_text_view_image"
            android:text="@string/favorite_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintlayoutEmptyFavorites"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvEmptyFavorites"
            style="@style/StyleViewTextFavoriteScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_medium_size"
            android:gravity="center"
            android:text="@string/empty_favorites_text"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFavorites"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/layout_normal_size"
        android:orientation="vertical"
        android:visibility="visible"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="8"
        tools:listitem="@layout/item_recipe" />

</LinearLayout>