<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecipeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height_constraintlayout">

            <ImageView
                android:id="@+id/ivRecipe"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/category_image_title"
                android:scaleType="centerCrop"
                android:src="@drawable/bcg_categories"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvRecipeTitle"
                style="@style/StyleTitleView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/layout_medium_size"
                android:layout_marginBottom="@dimen/layout_medium_size"
                android:background="@drawable/shape_drawable_title"
                android:padding="@dimen/padding_text_view_image"
                app:layout_constrainedWidth="true"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="бургер с длинным названием" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            style="@style/StyleTitleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_medium_size"
            android:layout_marginTop="@dimen/layout_medium_size"
            android:layout_marginBottom="@dimen/layout_normal_size"
            android:text="@string/recipe_ingredients" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvIngredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_medium_size"
            android:layout_marginVertical="@dimen/layout_normal_size"
            android:background="@drawable/shape_drawable_text"
            android:orientation="vertical"
            android:padding="@dimen/padding_text_view"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/ingredient_recipe" />

        <TextView
            style="@style/StyleTitleView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_medium_size"
            android:layout_marginVertical="@dimen/layout_normal_size"
            android:text="@string/recipe_method" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvMethod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/layout_medium_size"
            android:layout_marginVertical="@dimen/layout_normal_size"
            android:background="@drawable/shape_drawable_text"
            android:orientation="vertical"
            android:padding="@dimen/padding_text_view"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/method_recipe" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>